[gd_scene load_steps=21 format=4 uid="uid://bhdtyhdxdivwg"]

[ext_resource type="Script" uid="uid://bmmw8i83dyeou" path="res://scenes/main_scene.gd" id="1_gubc5"]
[ext_resource type="Texture2D" uid="uid://bym74op5wjxx1" path="res://assets/sprites/background/background.png" id="1_pw63i"]
[ext_resource type="Texture2D" uid="uid://ciu07f42bylyh" path="res://assets/sprites/water/water.png" id="2_7ykc4"]
[ext_resource type="Texture2D" uid="uid://ejc2v3gtfytb" path="res://assets/sprites/fishermans/boat.png" id="3_7ykc4"]
[ext_resource type="Texture2D" uid="uid://i5i1aru18p7g" path="res://icon.svg" id="4_pu3yx"]
[ext_resource type="PackedScene" uid="uid://bwqm7jufoed7b" path="res://ui/shop.tscn" id="6_rt2n2"]
[ext_resource type="PackedScene" uid="uid://ctg1fx7elwl1p" path="res://assets/fonts/upheaval/map.tscn" id="7_c16ls"]
[ext_resource type="PackedScene" uid="uid://b7o878bg7yltg" path="res://ui/card_selector.tscn" id="8_18nlu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pu3yx"]
texture = ExtResource("2_7ykc4")
texture_region_size = Vector2i(64, 64)
0:0/animation_columns = 2
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gubc5"]
texture = ExtResource("2_7ykc4")
texture_region_size = Vector2i(64, 64)
2:0/animation_columns = 2
2:0/animation_frame_0/duration = 1.0
2:0/animation_frame_1/duration = 1.0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_rt2n2"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_pu3yx")
sources/2 = SubResource("TileSetAtlasSource_gubc5")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c16ls"]
bg_color = Color(0.262525, 0.585186, 0.799414, 0.207843)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rt2n2"]
size = Vector2(188, 240)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gubc5"]
size = Vector2(288, 272)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c16ls"]
size = Vector2(368, 144)

[sub_resource type="Animation" id="Animation_18nlu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Shop:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Map:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rt2n2"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Shop:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Map:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_c1pb6"]
resource_name = "map"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Map:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_c16ls"]
resource_name = "shop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Shop:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c1pb6"]
_data = {
&"RESET": SubResource("Animation_18nlu"),
&"idle": SubResource("Animation_rt2n2"),
&"map": SubResource("Animation_c1pb6"),
&"shop": SubResource("Animation_c16ls")
}

[node name="MainScene" type="Node2D" node_paths=PackedStringArray("cinematic_camera", "anim")]
script = ExtResource("1_gubc5")
cinematic_camera = NodePath("Camera2D")
anim = NodePath("AnimationPlayer")

[node name="Background" type="TextureRect" parent="."]
z_index = -2
offset_left = -192.0
offset_top = -1208.0
offset_right = 1760.0
offset_bottom = 491.0
mouse_filter = 2
texture = ExtResource("1_pw63i")
expand_mode = 1

[node name="Water" type="Node2D" parent="."]
position = Vector2(272, 518)

[node name="TileMapLayer" type="TileMapLayer" parent="Water"]
self_modulate = Color(0.788235, 1, 1, 0.839216)
z_index = 1
position = Vector2(-122, 79)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAD//wAAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAACAAIAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAD/////AgACAAAAAAD//wEAAQAAAAAAAAD//wIAAQAAAAAAAAD//wMAAQAAAAAAAAAAAP//AgACAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAABAP//AgACAAAAAAABAAAAAQAAAAAAAAABAAMAAQAAAAAAAAACAP//AgACAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAAAAAACAAMAAQAAAAAAAAADAP//AgACAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAAEAP//AgACAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAFAP//AgACAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAGAP//AgACAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAHAP//AgACAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAIAP//AgACAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAJAP//AgACAAAAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAKAP//AgACAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAD+////AgACAAAAAAD+/wAAAQAAAAAAAAD+/wEAAQAAAAAAAAD+/wIAAQAAAAAAAAD+/wMAAQAAAAAAAAALAAAAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAP//AgACAAAAAAAMAP//AgACAAAAAAD9////AgACAAAAAAD9/wAAAQAAAAAAAAD9/wEAAQAAAAAAAAD9/wIAAQAAAAAAAAD9/wMAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAEAAQAAAAAAAAAMAAAAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_rt2n2")

[node name="WaterBackground" type="Panel" parent="Water"]
z_index = -1
offset_left = -381.0
offset_top = -28.0
offset_right = 1291.0
offset_bottom = 594.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c16ls")

[node name="WaterForeground" type="Panel" parent="Water"]
z_index = 4
offset_left = -397.0
offset_top = -26.0
offset_right = 1299.0
offset_bottom = 602.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c16ls")

[node name="Collectables" type="Node2D" parent="Water"]
z_index = 1

[node name="FishermanHut" type="Area2D" parent="."]
position = Vector2(648, 360)

[node name="Sprite2D" type="Sprite2D" parent="FishermanHut"]
position = Vector2(-54, 0)
scale = Vector2(1.53125, 1.9375)
texture = ExtResource("4_pu3yx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishermanHut"]
position = Vector2(-58, 0)
shape = SubResource("RectangleShape2D_rt2n2")
debug_color = Color(0.928759, 3.20551e-05, 0.663403, 0.42)

[node name="Shop" type="Area2D" parent="."]
position = Vector2(368, 296)

[node name="Sprite2D" type="Sprite2D" parent="Shop"]
position = Vector2(-36, 48)
scale = Vector2(2.4375, 2.25)
texture = ExtResource("4_pu3yx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shop"]
position = Vector2(-40, 48)
shape = SubResource("RectangleShape2D_gubc5")

[node name="Boat" type="Area2D" parent="."]
position = Vector2(896, 484)

[node name="Sprite2D" type="Sprite2D" parent="Boat"]
scale = Vector2(3, 3)
texture = ExtResource("3_7ykc4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boat"]
shape = SubResource("RectangleShape2D_c16ls")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, -832)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Shop" parent="UI" instance=ExtResource("6_rt2n2")]
visible = false

[node name="Map" parent="UI" instance=ExtResource("7_c16ls")]
visible = false

[node name="CardSelector" parent="UI" instance=ExtResource("8_18nlu")]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c1pb6")
}
autoplay = "idle"

[connection signal="input_event" from="FishermanHut" to="." method="_on_fisherman_hut_input_event"]
[connection signal="input_event" from="Shop" to="." method="_on_shop_input_event"]
[connection signal="input_event" from="Boat" to="." method="_on_boat_input_event"]
[connection signal="shop_close" from="UI/Shop" to="." method="_on_shop_shop_close"]
[connection signal="map_close" from="UI/Map" to="." method="_on_map_map_close"]
[connection signal="character_card_selected" from="UI/CardSelector" to="." method="_on_card_selector_character_card_selected"]
